<resources>
    <string name="app_name">Ziiq</string>
    <string name="action_settings">Settings</string>
    <string name="action_my_questions">My Questions</string>
    <string name="correct_answer">Correct answer!</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="your_question">Your question</string>
    <string name="make_question">Make your own question!</string>
    <string name="sign_in">Sign in</string>
    <string name="mq_solves">Solves:</string>
    <string name="loading">Loading...</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="save">Save</string>
    <string name="my_name">My Name</string>
    <string name="question">Question</string>
    <string name="langauge">Language</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="ranking">Ranking</string>
    <string name="points">Points</string>
</resources>
