<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_black_gradient"
        tools:context=".NewQuestionActivity">

    <EditText
            android:id="@+id/new_question_text"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_question_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/new_question_language_hint"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"/>

    <LinearLayout
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:orientation="vertical">
        <EditText
                android:id="@+id/new_question_a1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:hint="@string/answer_1"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/new_question_a2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"/>

        <EditText
                android:id="@+id/new_question_a2"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:hint="@string/answer_2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/new_question_a3"
                app:layout_constraintTop_toBottomOf="@id/new_question_a1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

        <EditText
                android:id="@+id/new_question_a3"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:hint="@string/answer_3"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/new_question_a4"
                app:layout_constraintTop_toBottomOf="@id/new_question_a2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

        <EditText
                android:id="@+id/new_question_a4"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:hint="@string/answer_4"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_question_a3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"/>
    </LinearLayout>

    <Button
            android:id="@+id/btn_save"
            android:onClick="save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.971"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.982"/>

    <RadioGroup
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.2"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:orientation="vertical">
        <RadioButton
                android:onClick="onRadioButtonClicked"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/radioButton1"/>
        <RadioButton
                android:onClick="onRadioButtonClicked"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioButton1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/radioButton2"/>
        <RadioButton
                android:onClick="onRadioButtonClicked"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioButton2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/radioButton3"/>
        <RadioButton
                android:onClick="onRadioButtonClicked"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioButton3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/radioButton4"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>